# audiobench

./: -  .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  RELEASING.md  index.html  mkdocs.yml  pyproject.toml  qwen_modal.py  sitemap.xml
docker/agent/: Dockerfile
docs/: agent-adapter-spec.md  index.md  quickstart.md
docs/models/: index.md  qwen2-audio.md
docs/reference/: prompts.md  reproducibility.md
docs/suites/: asr-robust.md  index.md  sound-id.md
examples/: demo.sh
examples/recording/: cards.sh  shotlist.md  voiceover.md
examples/scenarios/: factory_floor.yaml
guides/bring-your-own-model/: index.html
guides/hf-leaderboard/: index.html
guides/repro-launch-flow/: index.html
models/: index.html
models/qwen2-audio/: index.html
quickstart/: index.html
reference/prompts/: index.html
reference/reproducibility/: index.html
results/: demo-fast-clap.json  demo-fast-weak.json  demo-heuristic.json  demo-weak.json  inline.json  qwen2-modal-smoke.json  recipes.json  run-10d037b0.json  run-2900008b.json  run-39f564fa.json  run-5c224f1c.json  run-997d65ef.json  run-af651f90.json  run-b7d12a87.json  run-base-demo.json  run-bundled.json  run-c785e8c4.json  run-custom.json  run-ensemble.json  run-tiny-demo.json
search/: search_index.json
src/audiobench/: cli.py  compare.py  demo.py  hashing.py  labels.py  metrics.py  mixing.py  packs.py  perturbations.py  probes.py  profiles.py  prompts.py  recipes.py  report.py  sound_id_metrics.py
src/audiobench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/audiobench/data/asr_robust/: manifest.json
src/audiobench/data/audiobench-demo-audio/: SUMMARY.md  questions.yaml  questions_top5.yaml
src/audiobench/data/sound_id/: procedural.py  prompts.yaml
src/audiobench/data/sound_id/packs/: cabin.json  core.json  demo.json  health.json  home.json  security.json
src/audiobench/models/: agent.py  agent_llms.py  agent_sandbox.py  audio_llm.py  clap.py  gemini.py  heuristic.py  qwen2_audio.py  registry.py  voxtral.py  whisper.py
src/audiobench/suites/: asr_robust.py  sound_id.py
suites/: index.html
suites/asr-hallucination/: index.html
suites/asr-robust/: index.html
suites/sound-id/: index.html
tests/: test_agent_adapter.py  test_smoke.py  test_sound_id.py
