[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobench"
version = "0.1.1"
description = "Reproducible CLI benchmark for audio ML models."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Korin Aldam-Tajima", email = "kaldamtajima@hmc.edu"}]
keywords = ["audio", "benchmark", "asr", "whisper", "sound-event", "evaluation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.0,<16.0",
  "numpy>=1.24,<3.0",
  "scipy>=1.11,<2.0",
  "soundfile>=0.12,<1.0",
  "PyYAML>=6.0,<7.0",
  "jiwer>=3.0,<5.0",
  "openai-whisper>=20231117",
]

[project.optional-dependencies]
clap = ["laion-clap>=1.1.4"]
qwen = ["transformers>=4.40", "torch>=2.1"]
docs = [
  "mkdocs>=1.6,<2.0",
  "mkdocs-material>=9.5,<10.0",
  "pymdown-extensions>=10.0",
]
dev = [
  "pytest>=8",
  "build>=1.2",
  "twine>=5",
]

[project.urls]
Homepage      = "https://audiobench.dev"
Documentation = "https://thenirock.github.io/audiobench/"
Repository    = "https://github.com/THENIROCK/audiobench"
Issues        = "https://github.com/THENIROCK/audiobench/issues"
Changelog     = "https://github.com/THENIROCK/audiobench/blob/main/CHANGELOG.md"

[project.scripts]
audiobench = "audiobench.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"audiobench.data.asr_robust" = ["manifest.json", "clips/*.wav"]
"audiobench.data.sound_id"   = ["packs/*.json", "prompts.yaml"]
